@@ -1,3 +1,4 @@
+	* added feature to ask a torrent if it needs to save its resume data or not
 	* added setting to ignore file modification time when loading resume files
 	* support more fine-grained torrent states between which peer sources it
 	  announces to
